--- a/src/main/resources/gui/DoctorController.fxml
+++ b/src/main/resources/gui/DoctorController.fxml
@@ -215,7 +215,7 @@
                            </font>
                         </Text>
                         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#dbe2ef" height="125.0" layoutX="200.0" layoutY="471.0" stroke="TRANSPARENT" strokeType="INSIDE" width="800.0" />
-                        <TextArea fx:id="txtTreatmnt" layoutX="206.0" layoutY="477.0" opacity="0.75" prefHeight="113.0" prefWidth="788.0" promptText="No treatment available yet.">
+                        <TextArea fx:id="txtTreatmnt" layoutX="206.0" layoutY="477.0" onKeyTyped="#txtModified" opacity="0.75" prefHeight="113.0" prefWidth="788.0" promptText="No treatment available yet.">
                            <font>
                               <Font name="Arial" size="14.0" />
                            </font></TextArea>
@@ -332,66 +332,84 @@
                               <TextField fx:id="tFieldActivityperDayJEJ" layoutX="631.0" layoutY="8.0" prefHeight="25.0" prefWidth="127.0" />
                            </children>
                         </Group>
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#5481a4" height="34.0" layoutX="200.0" layoutY="98.0" stroke="TRANSPARENT" strokeType="INSIDE" width="800.0" />
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#dbe2ef" height="130.0" layoutX="200.0" layoutY="126.0" stroke="TRANSPARENT" strokeType="INSIDE" width="800.0" />
-                        <Text fill="WHITE" layoutX="206.0" layoutY="119.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Phenotype Assessment" wrappingWidth="788.0000610351562">
+                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#5481a4" height="34.0" layoutX="200.0" layoutY="73.0" stroke="TRANSPARENT" strokeType="INSIDE" width="800.0" />
+                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#dbe2ef" height="130.0" layoutX="200.0" layoutY="101.0" stroke="TRANSPARENT" strokeType="INSIDE" width="800.0" />
+                        <Text fill="WHITE" layoutX="206.0" layoutY="94.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Phenotype Assessment" wrappingWidth="788.0000610351562">
                            <font>
                               <Font name="Arial" size="18.0" />
                            </font>
                         </Text>
-                        <Text layoutX="288.0" layoutY="154.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Exacerbations per year" wrappingWidth="779.0">
+                        <Text layoutX="288.0" layoutY="129.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Exacerbations per year" wrappingWidth="779.0">
                            <font>
                               <Font name="Arial" size="18.0" />
                            </font>
                         </Text>
-                        <Text layoutX="629.0" layoutY="232.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Chronic Expectoration:" wrappingWidth="244.00000000000023">
+                        <Text layoutX="629.0" layoutY="207.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Chronic Expectoration:" wrappingWidth="244.00000000000023">
                            <font>
                               <Font name="Arial" size="18.0" />
                            </font>
                         </Text>
-                        <Text layoutX="286.0" layoutY="189.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Time Between exacerbations (Weeks)" wrappingWidth="779.0">
+                        <Text layoutX="286.0" layoutY="164.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Time Between exacerbations (Weeks)" wrappingWidth="779.0">
                            <font>
                               <Font name="Arial" size="18.0" />
                            </font>
                         </Text>
-                        <Text layoutX="248.0" layoutY="232.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cough:" wrappingWidth="244.00000000000023">
+                        <Text layoutX="248.0" layoutY="207.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cough:" wrappingWidth="244.00000000000023">
                            <font>
                               <Font name="Arial" size="18.0" />
                            </font>
                         </Text>
-                        <RadioButton fx:id="rbChronExY" layoutX="840.0" layoutY="216.0" mnemonicParsing="false" onAction="#toggleChroExpY" text="Yes">
+                        <RadioButton fx:id="rbChronExY" layoutX="840.0" layoutY="191.0" mnemonicParsing="false" onAction="#toggleChroExpY" text="Yes">
                            <font>
                               <Font name="Arial" size="14.0" />
                            </font>
                         </RadioButton>
-                        <RadioButton fx:id="rbChronExN" layoutX="914.0" layoutY="216.0" mnemonicParsing="false" onAction="#toggleChroExpN" text="No">
+                        <RadioButton fx:id="rbChronExN" layoutX="914.0" layoutY="191.0" mnemonicParsing="false" onAction="#toggleChroExpN" text="No">
                            <font>
                               <Font name="Arial" size="14.0" />
                            </font>
                         </RadioButton>
-                        <RadioButton fx:id="rbCoughY" layoutX="343.0" layoutY="217.0" mnemonicParsing="false" onAction="#toggleCoughY" text="Yes">
+                        <RadioButton fx:id="rbCoughY" layoutX="343.0" layoutY="192.0" mnemonicParsing="false" onAction="#toggleCoughY" text="Yes">
                            <font>
                               <Font name="Arial" size="14.0" />
                            </font>
                         </RadioButton>
-                        <RadioButton fx:id="rbCoughN" layoutX="417.0" layoutY="217.0" mnemonicParsing="false" onAction="#toggleCoughN" text="No">
+                        <RadioButton fx:id="rbCoughN" layoutX="417.0" layoutY="192.0" mnemonicParsing="false" onAction="#toggleCoughN" text="No">
                            <font>
                               <Font name="Arial" size="14.0" />
                            </font>
                         </RadioButton>
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#5481a4" height="34.0" layoutX="200.0" layoutY="273.0" stroke="TRANSPARENT" strokeType="INSIDE" width="800.0" />
-                        <Text fill="WHITE" layoutX="206.0" layoutY="294.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mixed Asthma Conditions" wrappingWidth="788.0000610351562">
+                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#5481a4" height="34.0" layoutX="200.0" layoutY="283.0" stroke="TRANSPARENT" strokeType="INSIDE" width="800.0" />
+                        <Text fill="WHITE" layoutX="206.0" layoutY="304.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mixed Asthma Conditions" wrappingWidth="788.0000610351562">
                            <font>
                               <Font name="Arial" size="18.0" />
                            </font>
                         </Text>
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#dbe2ef" height="125.0" layoutX="200.0" layoutY="301.0" stroke="TRANSPARENT" strokeType="INSIDE" width="800.0" />
-                        <CheckBox fx:id="checkMayor0" layoutX="237.0" layoutY="316.0" mnemonicParsing="false" text="Very positive bronchodilator test" />
-                        <CheckBox fx:id="checkMayor1" layoutX="237.0" layoutY="347.0" mnemonicParsing="false" text="Eosinophilia in sputum" />
-                        <CheckBox fx:id="checkMayor2" layoutX="237.0" layoutY="378.0" mnemonicParsing="false" text="Personal history of asthma" />
-                        <CheckBox fx:id="checkMinor0" layoutX="701.0" layoutY="324.0" mnemonicParsing="false" text="High IgE" />
-                        <CheckBox fx:id="checkMinor1" layoutX="701.0" layoutY="355.0" mnemonicParsing="false" text="Personal history of atopy" />
-                        <CheckBox fx:id="checkMinor2" layoutX="701.0" layoutY="386.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="217.0" text="Positive bronchodilator test on at least 2 occasions" wrapText="true" />
+                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#dbe2ef" height="125.0" layoutX="200.0" layoutY="311.0" stroke="TRANSPARENT" strokeType="INSIDE" width="800.0" />
+                        <CheckBox fx:id="checkMayor0" layoutX="250.0" layoutY="324.0" mnemonicParsing="false" text="Very positive bronchodilator test">
+                           <font>
+                              <Font name="Arial" size="14.0" />
+                           </font></CheckBox>
+                        <CheckBox fx:id="checkMayor1" layoutX="250.0" layoutY="364.0" mnemonicParsing="false" text="Eosinophilia in sputum">
+                           <font>
+                              <Font name="Arial" size="14.0" />
+                           </font></CheckBox>
+                        <CheckBox fx:id="checkMayor2" layoutX="250.0" layoutY="404.0" mnemonicParsing="false" text="Personal history of asthma">
+                           <font>
+                              <Font name="Arial" size="14.0" />
+                           </font></CheckBox>
+                        <CheckBox fx:id="checkMinor0" layoutX="650.0" layoutY="324.0" mnemonicParsing="false" text="High IgE">
+                           <font>
+                              <Font name="Arial" size="14.0" />
+                           </font></CheckBox>
+                        <CheckBox fx:id="checkMinor1" layoutX="650.0" layoutY="364.0" mnemonicParsing="false" text="Personal history of atopy">
+                           <font>
+                              <Font name="Arial" size="14.0" />
+                           </font></CheckBox>
+                        <CheckBox fx:id="checkMinor2" layoutX="650.0" layoutY="397.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="217.0" text="Positive bronchodilator test on at least 2 occasions" wrapText="true">
+                           <font>
+                              <Font name="Arial" size="14.0" />
+                           </font></CheckBox>
                         <Button layoutX="515.0" layoutY="621.0" mnemonicParsing="false" onAction="#execCreateReport" prefHeight="28.0" prefWidth="170.0" stylesheets="@buttonStyle.css" text="Create New Report" textFill="#ededf5">
                            <font>
                               <Font name="Arial Black" size="12.0" />
@@ -400,8 +418,25 @@
                               <Cursor fx:constant="HAND" />
                            </cursor>
                         </Button>
-                        <TextField fx:id="tFieldExaC" layoutX="613.0" layoutY="134.0" prefHeight="25.0" prefWidth="227.0" />
-                        <TextField fx:id="tFieldExaT" layoutX="613.0" layoutY="170.0" prefHeight="25.0" prefWidth="227.0" />
+                        <TextField fx:id="tFieldExaC" layoutX="613.0" layoutY="109.0" prefHeight="25.0" prefWidth="227.0" />
+                        <TextField fx:id="tFieldExaT" layoutX="613.0" layoutY="145.0" prefHeight="25.0" prefWidth="227.0" />
+                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#5481a4" height="34.0" layoutX="201.0" layoutY="240.0" stroke="TRANSPARENT" strokeType="INSIDE" width="800.0" />
+                        <Text fill="WHITE" layoutX="207.0" layoutY="263.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Alpha-1 Antitrypsin Deficiency (AATD):" wrappingWidth="788.0000610351562">
+                           <font>
+                              <Font name="Arial" size="18.0" />
+                           </font>
+                        </Text>
+                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#dbe2ef" height="34.0" layoutX="550.0" layoutY="240.0" stroke="TRANSPARENT" strokeType="INSIDE" width="451.0" />
+                        <RadioButton fx:id="rbAATDY" layoutX="708.0" layoutY="248.0" mnemonicParsing="false" onAction="#toggleAATDY" text="Yes">
+                           <font>
+                              <Font name="Arial" size="14.0" />
+                           </font>
+                        </RadioButton>
+                        <RadioButton fx:id="rbAATDN" layoutX="790.0" layoutY="248.0" mnemonicParsing="false" onAction="#toggleAATDN" text="No">
+                           <font>
+                              <Font name="Arial" size="14.0" />
+                           </font>
+                        </RadioButton>
                      </children>
                   </Pane>
                </children>
